--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,4 +1,5 @@
-name: Snyk Security Scan with SARIF Upload and Issue Creation 
+name: Create GitHub Issues from SARIF Report
+
 on:
   push:
     branches:
@@ -6,46 +7,43 @@ on:
 
 permissions:
   actions: write
-  issues: write  # Grant permission to create issues
-  security-events: write
+  issues: write  # Required to create issues
 
 jobs:
-  security:
+  create-issues:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python@master
-        continue-on-error: true
-        env: 
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          command: code test
-          args: "--sarif-file-output=path/snyk.sarif"
-
-      - name: Check if SARIF file exists and print contents
-        run: |
-          ls -la  # List files to check if snyk.sarif exists
-          cat path/snyk.sarif  # Display the contents of the SARIF file
-
       - name: Upload SARIF report to GitHub
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: path/snyk.sarif
+          sarif_file: path/to/your/sarif-file.sarif
           token: ${{ secrets.GITHUB_TOKEN }}
-          wait-for-processing: true
 
       - name: Create GitHub Issues from SARIF
-        if: success() && steps.upload-sarif.outputs.upload-success == 'true'
         run: |
-          issues=$(cat path/snyk.sarif | jq -r '.runs[0].results[] | "\(.message.text) - URI: \(.locations[0].physicalLocation.artifactLocation.uri)"')
+          # Parse SARIF and extract issues
+          issues=$(cat path/to/your/sarif-file.sarif | jq -r '.runs[0].results[] | "\(.message.text) - File: \(.locations[0].physicalLocation.artifactLocation.uri) Line: \(.locations[0].physicalLocation.region.startLine)"')
           
+          # If no issues found, exit early
+          if [ -z "$issues" ]; then
+            echo "No issues found in SARIF report"
+            exit 0
+          fi
+
+          # Iterate through the issues and create GitHub issues
           for issue in $issues; do
-            # Create issue for each vulnerability found
+            title=$(echo "$issue" | cut -d'-' -f1)
+            file_and_line=$(echo "$issue" | cut -d'-' -f2)
+
+            echo "Creating issue: $title"
+
             curl -X POST \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-              -d '{"title": "Security Issue: " + issue, "body": "Description: This issue was detected by SARIF scan. Please review.", "labels": ["security", "vulnerability"]}' \
-              https://api.github.com/repos/${{ github.repository }}/issues
+              -d "{\"title\": \"Security Issue: $title\", \"body\": \"Description: This issue was detected by SARIF scan. Please review. Location: $file_and_line.\", \"labels\": [\"security\", \"vulnerability\"]}" \
+              "https://api.github.com/repos/${{ github.repository }}/issues" \
+              -w "\nResponse code: %{http_code}\n"
           done
