--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Check for vulnerabilities and create an issue
         id: snyk-issue
         run: |
+          # Unset GITHUB_TOKEN to avoid conflicts with GH_PAT
+          unset GITHUB_TOKEN
+
           # Authenticate GitHub CLI with GH_PAT
           echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
 
@@ -58,4 +61,4 @@ jobs:
             echo "Snyk results file not found."
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }}
