--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -43,17 +43,19 @@ jobs:
           # Unset GITHUB_TOKEN to avoid conflicts with GH_PAT
           unset GITHUB_TOKEN
 
-          # Authenticate GitHub CLI with GH_PAT
-          echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
-          
           # Check if snyk_results.json exists and process it
           if [ -f path/snyk_results.json ]; then
             VULNERABILITIES=$(jq '.vulnerabilities' path/snyk_results.json)
             if [ "$VULNERABILITIES" != "[]" ]; then
               echo "Vulnerabilities found! Creating an issue..."
+
               ISSUE_TITLE="Snyk Alert: Credentials in Code Detected"
               ISSUE_BODY="Snyk has detected credentials in the code. Please review the following vulnerabilities:\n\n$VULNERABILITIES"
-              gh issue create --title "$ISSUE_TITLE" --body "$ISSUE_BODY" --label "security"
+
+              # Create the issue using the GH_PAT directly without 'gh auth login'
+              curl -X POST -H "Authorization: token ${{ secrets.GH_PAT }}" \
+                -d "{\"title\":\"$ISSUE_TITLE\", \"body\":\"$ISSUE_BODY\", \"labels\":[\"security\"]}" \
+                https://api.github.com/repos/${{ github.repository }}/issues
             else
               echo "No vulnerabilities found."
             fi
