--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,4 +1,5 @@
-name: Snyk Security Scan with SARIF Upload and Issue Creation 
+name: Snyk Security Scan with SARIF Upload and Issue Creation
+
 on:
   push:
     branches:
@@ -40,19 +41,21 @@ jobs:
       - name: Check for vulnerabilities and create an issue
         id: snyk-issue
         run: |
-          # Unset GITHUB_TOKEN to avoid conflicts with GH_PAT
+          # Ensure that GITHUB_TOKEN is not used to avoid conflicts with GH_PAT
           unset GITHUB_TOKEN
 
           # Check if snyk_results.json exists and process it
           if [ -f path/snyk_results.json ]; then
+            # Extract vulnerabilities from JSON file using jq
             VULNERABILITIES=$(jq '.vulnerabilities' path/snyk_results.json)
+
             if [ "$VULNERABILITIES" != "[]" ]; then
               echo "Vulnerabilities found! Creating an issue..."
 
-              ISSUE_TITLE="Snyk Alert: Credentials in Code Detected"
-              ISSUE_BODY="Snyk has detected credentials in the code. Please review the following vulnerabilities:\n\n$VULNERABILITIES"
+              ISSUE_TITLE="Snyk Security Alert: Vulnerabilities Detected"
+              ISSUE_BODY="Snyk has detected vulnerabilities in the code. Please review the following details:\n\n$VULNERABILITIES"
 
-              # Create the issue using the GH_PAT directly without 'gh auth login'
+              # Create the issue using GitHub API with the provided GH_PAT
               curl -X POST -H "Authorization: token ${{ secrets.GH_PAT }}" \
                 -d "{\"title\":\"$ISSUE_TITLE\", \"body\":\"$ISSUE_BODY\", \"labels\":[\"security\"]}" \
                 https://api.github.com/repos/${{ github.repository }}/issues
