--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -37,20 +37,21 @@ jobs:
           RESPONSE=$(curl -H "Authorization: token ${{ secrets.GH_PAT }}" \
             "https://api.github.com/repos/${{ github.repository }}/code-scanning/alerts")
           
-          echo "Response from GitHub API:"
+          echo "Raw Response from GitHub API:"
           echo "$RESPONSE"
           
-          # Check if the response is empty or invalid
+          # Check if the response is empty
           if [[ -z "$RESPONSE" ]]; then
-            echo "No response from GitHub API"
+            echo "Error: No response received from GitHub API."
             exit 1
           fi
 
-          # Attempt to parse the JSON
-          echo "$RESPONSE" | jq .  # Attempt to validate the JSON response
+          # Attempt to parse the response and check for valid JSON
+          echo "$RESPONSE" | jq . || { echo "Error: Invalid JSON response from GitHub API"; exit 1; }
 
           # Process the alerts if valid JSON
-          if [ "$(echo "$RESPONSE" | jq '. | length')" -gt 0 ]; then
+          ALERT_COUNT=$(echo "$RESPONSE" | jq '. | length')
+          if [ "$ALERT_COUNT" -gt 0 ]; then
             echo "Code Scanning Alerts found! Creating issues..."
 
             # Loop through each alert and process it
